--- a/mddApi/pom.xml
+++ b/mddApi/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		    <mapstruct.version>1.5.3.Final</mapstruct.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -73,6 +74,11 @@
   			<version>2.5.0</version>
 		</dependency>
 		<dependency>
+    		<groupId>org.mapstruct</groupId>
+    		<artifactId>mapstruct</artifactId>
+    		<version>1.5.3.Final</version>
+		</dependency>
+		<dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
             <version>3.9.0</version>
@@ -90,6 +96,11 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+						</path>
+						<path>
+    						<groupId>org.mapstruct</groupId>
+    						<artifactId>mapstruct-processor</artifactId>
+    						<version>1.5.3.Final</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
